--- a/partials/recall.html
+++ b/partials/recall.html
@@ -251,8 +251,8 @@
                                             Cập nhật
                                         </button> -->
                                         <div class="form-group">
-                                            <button class="btn btn-warning btn-block btn-lg btn-update"
-                                                ng-disabled="_details.Status_student[0].id === 3" ng-click="up_detail()">Cập
+                                            <button class="btn btn-warning btn-block btn-lg btn-update" ng-disabled="_details.Status_student[0].id === 3"
+                                                ng-click="up_detail()">Cập
                                                 Nhật
                                             </button>
                                             <button class="btn btn-info btn-block" ng-click="showsms()">SMS</button>
@@ -268,17 +268,25 @@
             </div>
             <div class="modal-footer" style="border-top: none; padding-top: 0">
                 <div class="col-4">
-                    <button type="button" class="btn btn-block btn-lg btn-primary" ng-disabled="auth.Username !== _details.Manager[0].id"
+                    <button type="button" class="btn btn-block btn-lg btn-primary" ng-show="auth.Role[0].id !==0"
+                        ng-disabled="auth.Username !== _details.Manager[0].id" ng-click="addfriend(_details._id)">Thêm
+                        bạn
+                    </button>
+                    <button type="button" class="btn btn-block btn-lg btn-primary" ng-show="auth.Role[0].id ===0"
                         ng-click="addfriend(_details._id)">Thêm
                         bạn
                     </button>
                 </div>
                 <div class="col-4">
-                    <button type="button" class="btn btn-block btn-lg btn-success" ng-disabled="auth.Username !== _details.Manager[0].id  || _details.Status_student[0].id === 3"
+                    <button type="button" class="btn btn-block btn-lg btn-success" ng-show="auth.Role[0].id !==0" ng-disabled="auth.Username !== _details.Manager[0].id  || _details.Status_student[0].id === 3"
+                        data-toggle="modal" data-target="#time">Gọi lại thời gian</button>
+                    <button type="button" class="btn btn-block btn-lg btn-success" ng-show="auth.Role[0].id ===0" ng-disabled="_details.Status_student[0].id === 3"
                         data-toggle="modal" data-target="#time">Gọi lại thời gian</button>
                 </div>
                 <div class="col-4">
-                    <button type="button" class="btn btn-block btn-lg btn-warning" ng-disabled="auth.Username !== _details.Manager[0].id  || _details.Status_student[0].id === 3"
+                    <button type="button" class="btn btn-block btn-lg btn-warning" ng-show="auth.Role[0].id !==0" ng-disabled="auth.Username !== _details.Manager[0].id  || _details.Status_student[0].id === 3"
+                        ng-click="recall()">Gọi lại sau</button>
+                        <button type="button" class="btn btn-block btn-lg btn-warning" ng-show="auth.Role[0].id ===0" ng-disabled="_details.Status_student[0].id === 3"
                         ng-click="recall()">Gọi lại sau</button>
                 </div>
             </div>
