--- a/partials/home.html
+++ b/partials/home.html
@@ -271,7 +271,7 @@
                 <div class="col-4">
                     <button type="button" class="btn btn-block btn-lg btn-warning" ng-show="auth.Role[0].id !== 0" ng-disabled="auth.Username !== _details.Manager[0].id  || _details.Status_student[0].id === 3"
                         ng-click="recall()">Gọi lại sau</button>
-                        <button type="button" class="btn btn-block btn-lg btn-warning" ng-show="auth.Role[0].id -== 0"
+                        <button type="button" class="btn btn-block btn-lg btn-warning" ng-show="auth.Role[0].id === 0"
                         ng-click="recall()">Gọi lại sau</button>
                 </div>
             </div>
